# monolith

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
collatz/: BUILD.bazel  README.md  collatz.cpp
instructions/: BUILD.bazel  README.md  autograd.hpp  autograd_test.cpp  evaluator.hpp  instruction.hpp  logging.hpp  opcode.hpp  optimizer.hpp  optimizer_test.cpp
magic_squares/: BUILD.bazel  collision_generator.hpp  generate_taxicabs.cpp  generators.hpp  taxicab.cpp  taxicab_state.hpp  taxicab_state_test.cpp
magic_squares/docs/: magic_squares.bib  magic_squares.tex
magic_squares/log/: taxicab_3_2_2.txt  taxicab_3_2_4.txt  taxicab_4_2_2.txt
mendel/: BUILD.bazel  genetic_algorithm.hpp  genetic_operators.hpp  run_genetic_algorithm.cpp
mendel/evaluators/: tsp_evaluator.hpp
mendel/states/: permutation_state.hpp
numerics/: BUILD.bazel  algebraic_concepts.hpp  blas.hpp  blas_test.cpp  fft.hpp  fft_test.cpp  number_theory.hpp  number_theory_test.cpp  ode.hpp  ode_test.cpp  polynomial.hpp  polynomial_test.cpp  rootfinding.hpp  rootfinding_test.cpp
pinns/: BUILD.bazel  README.md  boundary_conditions.py  boundary_conditions_test.py  diff_ops.py  diff_ops_test.py
pinns/geometry/: BUILD.bazel  csg.py  domain.py  geometry_test.py  primitives.py
simdelbrot/: BUILD.bazel  README.md  animate.cpp  generate_samples.cpp  mandelbrot.hpp  stopwatch.hpp
spla/: BUILD.bazel  README.md  tensor.hpp  tensor_test.cpp
tourney/: BUILD.bazel  README.md  chess_benchmark.cpp  chess_cli.cpp  cli_chess.cpp  contracts.hpp  players.hpp
tourney/agents/: BUILD.bazel  human_agent.hpp  minimax_agent.hpp
tourney/algorithms/: minimax.hpp  perft.hpp
tourney/game_states/: BUILD.bazel  chess_state.cpp  chess_state.hpp  chess_state_test.cpp  tictactoe_state.hpp
tourney/games/: BUILD.bazel  chess.cpp  chess.hpp  chess_test.cpp  tictactoe.hpp
tourney/games/chess/: BUILD.bazel  benchmark.cpp  movegen.hpp  movegen_test.cpp
tourney/games/tictactoe/: BUILD.bazel
tourney/tree_search/: BUILD.bazel  minimax.hpp  perft.hpp
tourney/tree_searches/: minimax.hpp  perft.hpp
util/: BUILD.bazel  io.hpp
