module(
    name = "monolith",
    version = "1.0.0",
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.19",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0.bcr.2",
)
bazel_dep(
    name = "libpng",
    version = "1.6.54",
)

bazel_dep(
    name = "hedron_compile_commands",
    dev_dependency = True,
)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1f9360db1834d115c48279d38a97f30d64d3fd4a",
    # TODO Move off of fork once issue is resolved:
    # https://github.com/hedronvision/bazel-compile-commands-extractor/issues/279
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

bazel_dep(
    name = "rules_python",
    version = "2.2.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13")
use_repo(python, "python_3_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.13",
    requirements_lock = "//third_party/python:requirements_lock.txt",
)
use_repo(pip, "pip_deps")
