load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "contracts",
    hdrs = [
        "contracts.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "players",
    hdrs = [
        "players.hpp",
    ],
    deps = [
        "//tourney:contracts",
        "//tourney/tree_search:minimax",
    ],
)

cc_binary(
    name = "chess_benchmark",
    srcs = ["chess_benchmark.cpp"],
    deps = [
        "//tourney/game_states:chess_state",
        "//tourney/tree_search:perft",
    ],
)

cc_binary(
    name = "chess_cli",
    srcs = ["chess_cli.cpp"],
    deps = [
        ":players",
        "//tourney/game_states:chess_state",
    ],
)
