load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "contracts",
    hdrs = [
        "contracts.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "players",
    hdrs = [
        "players.hpp",
    ],
    deps = [
        "//tourney:contracts",
        "//tourney/algorithms:minimax",
    ],
)

cc_binary(
    name = "chess_benchmark",
    srcs = ["chess_benchmark.cpp"],
    deps = [
        "//tourney/algorithms:perft",
        "//tourney/games:chess",
    ],
)

cc_binary(
    name = "chess_cli",
    srcs = ["chess_cli.cpp"],
    deps = [
        ":players",
        "//tourney/games:chess",
    ],
)
