load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "human_agent",
    hdrs = [
        "human_agent.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tourney:contracts",
    ],
)

cc_library(
    name = "minimax_agent",
    hdrs = [
        "minimax_agent.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tourney:contracts",
    ],
)
