load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

GTEST_PATH = "@googletest//:gtest_main"

cc_library(
    name = "chess",
    srcs = [
        "chess.cpp",
    ],
    hdrs = [
        "chess.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "chess_test",
    size = "medium",
    srcs = ["chess_test.cpp"],
    deps = [
        ":chess",
        "//tourney/algorithms:perft",
        GTEST_PATH,
    ],
)

cc_library(
    name = "tictactoe",
    hdrs = [
        "tictactoe.hpp",
    ],
)
