load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "minimax",
    hdrs = [
        "minimax.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tourney:contracts",
    ],
)

cc_library(
    name = "perft",
    hdrs = [
        "perft.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tourney:contracts",
    ],
)
