load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

GTEST_PATH = "@googletest//:gtest_main"

cc_library(
    name = "movegen",
    hdrs = [
        "movegen.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "movegen_test",
    size = "medium",
    srcs = ["movegen_test.cpp"],
    deps = [
        ":movegen",
        "//tourney/algorithms:perft",
        GTEST_PATH,
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cpp"],
    deps = [
        ":movegen",
        "//tourney/algorithms:perft",
    ],
)
